tests/packaging-test/test_out/invalid-module.txt
error: cannot canonicalize module path
 --> \\?\C:\src\rust\catalyst\tests\packaging-test\invalid-module\root\a.ctl:1:7
  |
1 | use {"./a/b"}
  |       ^^^^^ caused by this
  |
  = info: related path: \\?\C:\src\rust\catalyst\tests\packaging-test\invalid-module\root\a\b.ctl
  = info: trace: The system cannot find the path specified. (os error 3)

